syntax = "proto3";

option csharp_namespace = "api_clientes.grpc.services.endereco.Protos";

package endereco;

service EnderecoService {

    rpc Listar (Empty) returns (EnderecosGet);
	rpc Obter (Request) returns (EnderecoGet);
    rpc Inserir (EnderecoPost) returns (Empty);
    rpc Alterar (EnderecoPut) returns (Empty);
    rpc Excluir (Request) returns (Empty);
}

message Empty {

}

message Request {

  int32 Id = 1;

}

message EnderecoPost {
  
  string Cep = 1;
  string Logradouro = 2;
  string Bairro = 3;
  string Cidade = 4;
  string Estado = 5;

}

message EnderecoPut {
  
  int32 Id = 1;
  string Cep = 2;
  string Logradouro = 3;
  string Bairro = 4;
  string Cidade = 5;
  string Estado = 6;

}

message EnderecoGet {
  
  int32 Id = 1;
  string Cep = 2;
  string Logradouro = 3;
  string Bairro = 4;
  string Cidade = 5;
  string Estado = 6;

}	

message EnderecosGet {

  repeated EnderecoGet items = 1;

}	